updated lasagna and added carrot cake

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <a href="./recipes/lasagna.html">Lasagna</a>
+    <br>
+    <a href="./recipes/carrotcake.html">Carrot cake</a>
 </body>
 </html>
