--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,7 +5,7 @@
    <p>Who doesn't love a cheesy sauced lasagna with a size of a brick, am i right?</p>
    <p>So i will show you now how to make this delicious dish with a simple and easy recipe.</p>
 <br>
-   <p>Here are the ingredients you will need:</p>
+   <h3>Ingredients</h3>
 
    <ul>
        <li>2 packs of lasagna pasta</li>
