--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <a href="./recipes/lasagna.html">Lasagna</a>
     <br>
     <a href="./recipes/carrotcake.html">Carrot cake</a>
+    <br>
+    <a href="./recipes/carbonara.html">Carbonara</a>
 </body>
 </html>
