--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -1,3 +1,9 @@
+<head>
+    <link rel="stylesheet" href="../style.css">
+</head>
+
+<body>
+    
 <h1>Carbonara pasta</h1>
 <br>
 <img src="./carbonara.png" alt="carbonara" width="150">
@@ -27,3 +33,5 @@
    </ol>
 <br>
 <p>Well, don't eat too much. That's what made me have a beer belly, not actually beer.</p>
+
+</body>
