--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -1,4 +1,10 @@
-<h1>Carrot Cake</h1>
+<head>
+   <link rel="stylesheet" href="../style.css">
+</head>
+
+<body>
+   
+   <h1>Carrot Cake</h1>
 <br>
 <img src="./carrot_cake.png" alt="carrot cake" width="150">
 <br>
@@ -29,3 +35,5 @@
    </ol>
    <br>
    <p>Not mandatory, but this cake is extra delicious if eaten along with a cup of coffee. Enjoy!</p>
+
+   </body>
