--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,4 +1,9 @@
-<h1>Lasagna</h1>
+<head>
+    <link rel="stylesheet" href="../style.css">
+</head>
+
+<body>
+    <h1>Lasagna</h1>
 <br>
 <img src="./lasagna.png" alt="lasagna" width="150">
 <br>
@@ -31,3 +36,4 @@
 <br>
 <p>That's it! I hope you liked it as much as i did.</p>
 <p>See you next time!</p>
+</body>
